# quantum-watch

./: .gitignore  AGENTS.md  LICENSE  README.md  agent.md  deploy.sh  next_feature.txt  setup.sh
firmware/esp-brookesia/: CMakeLists.txt  sdkconfig  sdkconfig.defaults
firmware/esp-brookesia/components/brookesia_app_settings/: CMakeLists.txt  esp_brookesia_app_settings.cpp  esp_brookesia_app_settings.hpp  idf_component.yml
firmware/esp-brookesia/main/: CMakeLists.txt  ancs_client.cpp  ancs_client.h  away_screen.cpp  away_screen.h  bg_image.c  bg_image.h  buttons.c  buttons.h  health_app.cpp  health_app.h  health_app_icon.c  main.cpp  notifications.cpp  notifications.h  voice_assistant.cpp  voice_assistant.h  voice_assistant_icon.c  watch_theme.h
ios/QuantumWatchCompanion/: ContentView.swift  Info.plist  QuantumWatchCompanionApp.swift
ios/QuantumWatchCompanion.xcodeproj/: project.pbxproj
ios/QuantumWatchCompanion/Assets.xcassets/AccentColor.colorset/: Contents.json
ios/QuantumWatchCompanion/Services/: AIService.swift  AudioDecoder.swift  BLEManager.swift  CallObserverService.swift  ContextSyncService.swift  HealthSyncService.swift  KeychainHelper.swift  SpeechService.swift  Theme.swift  VoiceAssistantViewModel.swift
ios/QuantumWatchCompanion/Views/: SettingsView.swift
tools/: convert_bg.py  gen_notif_icons.py
